--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -17,6 +17,20 @@ $viewport-sm: 576px;
 $shadow-md: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
 $shadow-sm: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
 
+%container-x {
+  padding-right: 1.6rem !important;
+  padding-left: 1.6rem !important;
+}
+
+%container-y {
+  padding-top: 1.6rem !important;
+  padding-bottom: 1.6rem !important;
+}
+
+%container-xy {
+  padding: 1.6rem !important;
+}
+
 %textarea {
   @extend %input;
   max-height: 180px;
@@ -32,7 +46,6 @@ $shadow-sm: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
 }
 
 %input {
-  margin-top: 1rem;
   font-family: inherit;
   border: none;
   padding: 0.6rem 1rem;
@@ -49,22 +62,22 @@ $shadow-sm: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
   }
 }
 
-button {
-  cursor: pointer;
-}
-
 %input-submit {
   @extend %input;
   border: 1px solid $secondary-color;
   background-color: transparent;
   transition: all 0.4s;
   width: 100%;
-  cursor: pointer;
 
   &:hover {
     background-color: $secondary-color;
     color: #fff;
   }
+}
+
+button,
+input[type="submit"] {
+  cursor: pointer;
 }
 
 body {
@@ -139,22 +152,19 @@ li {
   }
 }
 
-%container-x {
-  padding-right: 1.6rem !important;
-  padding-left: 1.6rem !important;
-}
-
-%container-y {
-  padding-top: 1.6rem !important;
-  padding-bottom: 1.6rem !important;
-}
-
-%container-xy {
-  padding: 1.6rem !important;
-}
-
 .modal-open {
   display: block !important;
+}
+
+form {
+  .input-wrapper {
+    margin: 1rem 0;
+
+    small {
+      display: block;
+      color: red;
+    }
+  }
 }
 
 /*ROOT*/
@@ -1711,10 +1721,9 @@ nav.top-bar {
 
   input,
   textarea {
-    margin: 1.4rem 0 !important;
     border-bottom: 1px solid $secondary-color !important;
     border-radius: 0 !important;
-    padding-left: 0 !important;
+    padding-left: 0.6rem !important;
   }
 
   .address {
@@ -1757,9 +1766,6 @@ nav.top-bar {
     input {
       @extend %input;
       display: block;
-      border-bottom: 1px solid $secondary-color;
-      width: 100%;
-      margin: 1.4rem 0;
     }
   }
 
@@ -1781,7 +1787,7 @@ footer {
   grid-area: footer;
   background-color: lighten($color: $secondary-color, $amount: 7);
 
-  section.contact-ways {
+  .contact-ways {
     @extend %container-y;
     @extend %container-x;
     display: flex;
@@ -1826,7 +1832,12 @@ footer {
   .contact-form {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-self: center;
+
+    .input-wrapper {
+      margin: 0.4rem 0;
+      text-align: center;
+    }
 
     input,
     textarea {
