--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -106,6 +106,11 @@ html {
   }
 }
 
+.link-default {
+  text-decoration: underline;
+  color: orange;
+}
+
 input {
   outline: none;
   @extend %input;
@@ -123,6 +128,23 @@ textarea {
 a {
   text-decoration: none;
   color: black;
+}
+
+dl {
+  display: flex;
+  flex-wrap: wrap;
+
+  dt {
+    flex-basis: 30%;
+    font-weight: bold;
+    margin-bottom: 0.6rem;
+    padding-right: 0.4rem;
+  }
+
+  dd {
+    flex-basis: 65%;
+    margin-bottom: 0.6rem;
+  }
 }
 
 button {
@@ -159,12 +181,17 @@ li {
 form {
   .input-wrapper {
     margin: 1rem 0;
+    width: 100%;
 
     small {
       display: block;
       color: red;
     }
   }
+}
+
+.fa-heart {
+  color: red;
 }
 
 /*ROOT*/
@@ -310,7 +337,7 @@ nav.top-bar {
     display: flex;
     position: absolute;
     bottom: 0;
-    right: -100%;
+    right: -500px;
     opacity: 0;
     transform: translateY(100%);
     background-color: #fff;
@@ -393,6 +420,37 @@ nav.top-bar {
     .user-action {
       cursor: pointer;
       margin-left: 1.4rem;
+      position: relative;
+
+      .user-window {
+        display: none;
+        position: absolute;
+        top: 100%;
+        left: 50%;
+        transform: translateX(-50%);
+        border: 2px solid $secondary-color;
+        background-color: #fff;
+
+        li {
+          border-top: 1px solid $secondary-color;
+
+          &:first-child {
+            border-top: none;
+          }
+          a {
+            display: block;
+            padding: 1rem 1.6rem;
+
+            &:hover {
+              background-color: $secondary-color;
+            }
+          }
+        }
+      }
+
+      &:hover .user-window {
+        display: block;
+      }
     }
 
     @media (min-width: $viewport-md) {
@@ -526,10 +584,15 @@ nav.top-bar {
   }
 }
 
+.account-modal .modal {
+  min-width: 280px;
+  max-width: 350px;
+}
+
 .modal {
   border: 5px solid $secondary-color;
 
-  .account-tab + .tabs-data {
+  .tabs-data {
     border: 1px solid $secondary-color;
     input {
       border-bottom: 1px solid $secondary-color;
@@ -1273,6 +1336,93 @@ nav.top-bar {
       "tabs tabs tabs tabs"
       ". specs specs ."
       "similiar-products similiar-products similiar-products similiar-products";
+  }
+}
+
+/*User page*/
+
+#user-page {
+  h1 {
+    font-size: 2rem;
+    margin: 2rem 0;
+  }
+
+  .fav-product-list,
+  .order-history {
+    grid-column: 2/3;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .list-item,
+  .inner-list-item {
+    margin-bottom: 2rem;
+    display: flex;
+  }
+  figure {
+    margin-right: 2rem;
+    max-width: 100px;
+
+    img {
+      @extend %responsive-img;
+    }
+  }
+
+  .product-details {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+
+  small {
+    color: $light-grey;
+  }
+
+  .order-history {
+    .list-item {
+      flex-direction: column;
+      padding: 1rem;
+      background-color: lighten($color: $light-grey, $amount: 40);
+      border: 1px solid $light-grey;
+      border-radius: 10px;
+    }
+
+    .inner-list-item {
+      margin-bottom: 1rem;
+    }
+
+    .order-sum {
+      padding-top: 1rem;
+      border-top: 1px solid $light-grey;
+    }
+  }
+
+  .user-nav {
+    grid-column: 2/3;
+    text-align: center;
+    font-size: 1.4rem;
+
+    li {
+      border-top: 1px solid $secondary-color;
+      transition: all 0.4s;
+
+      a {
+        display: block;
+        padding: 0.8rem 0;
+        width: 100%;
+        height: 100%;
+      }
+
+      &:first-child {
+        border-top: none;
+      }
+
+      &:hover {
+        background-color: $secondary-color;
+        color: #fff;
+      }
+    }
   }
 }
 
