--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -206,6 +206,7 @@ form {
   grid-template-areas: "header" "main" "footer";
   row-gap: 5rem;
   background-color: rgb(245, 245, 245);
+  min-height: 100vh;
 }
 
 header {
@@ -1020,81 +1021,109 @@ nav.top-bar {
     }
   }
 
-  .product-preview {
-    box-shadow: $shadow-md;
+  .product-preview-wrapper {
     position: relative;
+    box-shadow: $shadow-md;
     max-width: 17rem;
-    background-color: #fff;
-    transition: box-shadow 0.6s;
 
-    &:hover {
-      box-shadow: none;
-    }
-
-    .add-to-fav {
-      position: absolute;
-      top: 0.6rem;
-      right: 1rem;
-      font-size: 1.5rem;
-      z-index: 5;
-      color: red;
-    }
-
-    .preview-image {
-      display: block;
-      width: 100%;
-      height: 180px;
-      object-fit: cover;
-      object-position: center;
-      padding-right: 1rem;
-      padding-left: 1rem;
-      padding-top: 1rem;
-    }
-
-    .product-menu {
-      border-top: 1px solid $secondary-color;
-      z-index: 1;
-      transition: bottom 0.4s;
+    .product-preview {
       background-color: #fff;
-      font-size: 1.1rem;
+      transition: all 0.4s;
 
-      .product-menu-option {
-        cursor: pointer;
-        border-right: 1px solid $secondary-color;
-        text-align: center;
-        padding: 0.4rem 0;
-
-        &:last-child {
-          border-right: none;
-        }
-      }
-    }
-
-    .preview-product-details {
-      padding: 2rem 1rem;
-
-      .preview-product-name {
-        font-size: 1.3rem;
+      &:hover {
+        box-shadow: none;
+        transform: translate(5px, -5px);
       }
 
-      .product-rating {
-        color: gold;
-        padding: 0.6rem 0;
+      &:hover::before {
+        opacity: 1;
+        top: 10px;
+        right: 10px;
+      }
 
-        .review-count {
-          color: $light-grey;
+      &::before {
+        content: "";
+        display: block;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        right: 0;
+        background-color: $secondary-color;
+        opacity: 0;
+        z-index: -1;
+        transition: all 0.4s;
+      }
+
+      .add-to-fav {
+        position: absolute;
+        top: 0.6rem;
+        right: 1rem;
+        font-size: 1.5rem;
+        z-index: 5;
+        color: red;
+      }
+
+      .preview-image {
+        background-color: inherit;
+        display: block;
+        width: 100%;
+        height: 180px;
+        object-fit: cover;
+        object-position: center;
+        padding-right: 1rem;
+        padding-left: 1rem;
+        padding-top: 1rem;
+      }
+
+      .product-menu {
+        border-top: 1px solid $secondary-color;
+        z-index: 1;
+        transition: bottom 0.4s;
+        background-color: #fff;
+        font-size: 1.1rem;
+
+        .product-menu-option {
+          cursor: pointer;
+          border-right: 1px solid $secondary-color;
+          text-align: center;
+          padding: 0.4rem 0;
+
+          &:last-child {
+            border-right: none;
+          }
         }
       }
 
-      .preview-product-price {
-        .old-price {
-          color: $light-grey;
-          text-decoration: line-through;
-          padding-right: 0.6rem;
-        }
+      .preview-product-details {
+        background-color: #fff;
+        padding: 2rem 1rem;
 
-        .new-price {
+        .preview-product-name {
           font-size: 1.3rem;
+          text-decoration: underline;
+          color: purple;
+        }
+
+        .product-rating {
+          color: gold;
+          padding: 0.6rem 0;
+
+          .review-count {
+            color: $light-grey;
+          }
+        }
+
+        .preview-product-price {
+          .old-price {
+            color: $light-grey;
+            text-decoration: line-through;
+            padding-right: 0.6rem;
+          }
+
+          .new-price {
+            font-size: 1.3rem;
+          }
         }
       }
     }
@@ -1834,6 +1863,14 @@ nav.top-bar {
   #admin-update-product {
     grid-column: 2/3;
   }
+
+  #email-list {
+    grid-column: 2/3;
+  }
+
+  #feedbacks {
+    grid-column: 2/3;
+  }
 }
 
 /*CART*/
@@ -2089,6 +2126,7 @@ footer {
     display: flex;
     flex-direction: column;
     align-self: center;
+    width: 100%;
 
     .input-wrapper {
       margin: 0.4rem 0;
