--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,3 +1,5 @@
+@import "react-credit-cards/lib/styles.scss";
+
 * {
   padding: 0;
   margin: 0;
@@ -124,6 +126,20 @@ textarea {
   @extend %textarea;
 }
 
+.input-group {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+
+  label {
+    flex-basis: 100%;
+  }
+
+  .input-wrapper {
+    flex-basis: 48%;
+  }
+}
+
 /*GENERAL*/
 a {
   text-decoration: none;
@@ -218,6 +234,57 @@ main {
   display: grid;
   grid-template-columns: 1fr 10fr 1fr;
   row-gap: 5rem;
+}
+
+/*ALERT*/
+
+.alert-wrapper {
+  position: fixed;
+  width: 90%;
+  left: 50%;
+  top: -200px;
+  transform: translateX(-50%);
+  z-index: 999;
+  border-radius: 10px;
+  box-shadow: $shadow-md;
+  transition: all 0.6s;
+
+  &.alert-active {
+    top: 20px;
+  }
+
+  &.alert-success {
+    background-color: rgba(51, 204, 51, 0.9);
+  }
+
+  &.alert-error {
+    background-color: rgba(255, 0, 0, 0.9);
+  }
+
+  .alert {
+    position: relative;
+    padding: 1.2rem;
+    text-align: center;
+    color: #fff;
+
+    @keyframes alertTimer {
+      100% {
+        width: 0;
+      }
+    }
+
+    .alert-timer {
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      transform: translateX(-50%);
+      height: 3px;
+      width: 96%;
+      background-color: #fff;
+      border-radius: 10px;
+      animation: alertTimer 5s;
+    }
+  }
 }
 
 /*SELECTBOX*/
@@ -1025,14 +1092,18 @@ nav.top-bar {
     position: relative;
     box-shadow: $shadow-md;
     max-width: 17rem;
+    background-color: rgb(245, 245, 245);
 
     .product-preview {
       background-color: #fff;
-      transition: all 0.4s;
+      transition: transform 0.4s;
+      border: 1px solid $secondary-color;
 
       &:hover {
         box-shadow: none;
         transform: translate(5px, -5px);
+        border-left: none;
+        border-bottom: none;
       }
 
       &:hover::before {
@@ -2060,6 +2131,22 @@ nav.top-bar {
       @extend %input;
       display: block;
     }
+
+    .credit-card-details {
+      @media (min-width: $viewport-md) {
+        display: flex;
+        justify-content: space-between;
+      }
+
+      .card-input-wrapper {
+        flex-basis: 48%;
+      }
+
+      .rccs {
+        margin: 0 !important;
+        flex-basis: 48%;
+      }
+    }
   }
 
   .order-wrapper {
@@ -2149,4 +2236,62 @@ footer {
     background-color: $secondary-color;
     text-align: center;
   }
+}
+
+/*SKELETON*/
+
+@keyframes skeletonAnimation {
+  50% {
+    background-color: rgba(0, 0, 0, 0.15);
+  }
+
+  100% {
+    background-color: rgba(0, 0, 0, 0.1);
+  }
+}
+
+.skeleton {
+  background-color: rgba(0, 0, 0, 0.1);
+  margin-top: 1rem;
+  animation-name: skeletonAnimation;
+  animation-duration: 1s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+.skeleton-block {
+  flex-basis: 94%;
+  height: 200px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.small-line {
+  width: 60%;
+  height: 20px;
+  flex-basis: 48%;
+}
+
+.full-line {
+  height: 20px;
+  width: 100%;
+  flex-basis: 100%;
+}
+
+.product-preview-skeleton {
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  width: 240px !important;
+  height: 430px;
+  display: flex !important;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+
+  .skeleton {
+    margin-top: 0;
+  }
+}
+
+.image-skeleton {
+  flex-basis: 48%;
+  height: 380px;
 }
