--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -35,12 +35,16 @@ nav.top-bar {
         content: "";
         display: block;
         position: absolute;
-        top: 95%;
+        top: 100%;
         left: 0;
         width: 0;
         height: 2px;
-        background-color: red;
+        background-color: $tertiary-color;
         transition: all 0.4s;
+      }
+
+      &:hover a {
+        color: $tertiary-color;
       }
 
       &:hover::before {
