--- a/src/styles/_productPreview.scss
+++ b/src/styles/_productPreview.scss
@@ -13,6 +13,17 @@
       background: linear-gradient(to right bottom, #1a1a1a, #262626);
       color: $secondary-color;
       padding: 0.6rem;
+      transition: all 0.6s;
+
+      &:hover {
+        background: #e5e5e5;
+        color: $primary-color;
+      }
+
+      &:hover .product-menu input,
+      &:hover .review-count {
+        color: $primary-color !important;
+      }
 
       .add-to-fav {
         position: absolute;
@@ -24,7 +35,6 @@
       }
 
       .preview-image {
-        background-color: inherit;
         display: block;
         width: 100%;
         height: 220px;
@@ -50,7 +60,6 @@
       }
 
       .preview-product-details {
-        color: $secondary-color;
         padding-top: 1rem;
         padding-bottom: 1rem;
 
