--- a/src/styles/_productPreview.scss
+++ b/src/styles/_productPreview.scss
@@ -57,6 +57,10 @@
             border-right: none;
           }
         }
+
+        .add-to-cart {
+          justify-content: space-around;
+        }
       }
 
       .preview-product-details {
