--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -702,12 +702,15 @@ main {
     display: block;
     width: 50px;
     height: 50px;
-    object-fit: cover;
+    object-fit: contain;
     object-position: center;
+    margin-right: 0.6rem;
+    transition: all 0.6s;
   }
 
   .tns-nav-active img {
-    border-radius: 100%;
+    padding: 0.6rem;
+    background-color: $secondary-color;
   }
 }
 
