--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -467,7 +467,7 @@ main {
         display: block;
         width: 100%;
         height: 100%;
-        object-fit: contain;
+        object-fit: cover;
         object-position: center;
 
         @media (min-width: $viewport-xl) {
