--- a/src/styles/_productPreview.scss
+++ b/src/styles/_productPreview.scss
@@ -42,7 +42,7 @@
         display: block;
         width: 100%;
         height: 220px;
-        object-fit: cover;
+        object-fit: contain;
         object-position: center;
       }
 
