fixed missing img

--- a/src/styles/_mailing.scss
+++ b/src/styles/_mailing.scss
@@ -7,7 +7,7 @@
       rgba(38, 38, 38, 0.2),
       rgba(38, 38, 38, 0.9)
     ),
-    url("/mailing.jpg");
+    url("/notebookpowerui/mailing.jpg");
   background-size: cover;
   background-position: center;
   padding: 5rem 0;
