--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -15,6 +15,7 @@
 @import "_modal";
 @import "_skeleton";
 @import "_admin";
+@import "_banner";
 
 * {
   padding: 0;
@@ -418,233 +419,11 @@ main {
 
 #home {
   grid-template-areas:
-    "carousel carousel carousel"
+    "banner banner banner"
     ". categorycards ."
     "best-selling best-selling best-selling"
     "mailing mailing mailing"
     "daily-deals daily-deals daily-deals";
-
-  .carousel {
-    grid-area: carousel;
-    justify-self: center;
-    height: 40vh;
-    width: 100%;
-    max-width: 1200px;
-    position: relative;
-
-    .carousel.pointer-event {
-      -ms-touch-action: pan-y;
-      touch-action: pan-y;
-    }
-
-    .carousel-inner {
-      position: relative;
-      width: 100%;
-      overflow: hidden;
-      height: inherit;
-    }
-
-    .carousel-inner::after {
-      display: block;
-      clear: both;
-      content: "";
-    }
-
-    .carousel-item {
-      position: relative;
-      height: inherit;
-      display: none;
-      float: left;
-      width: 100%;
-      margin-right: -100%;
-      -webkit-backface-visibility: hidden;
-      backface-visibility: hidden;
-      transition: -webkit-transform 0.6s ease-in-out;
-      transition: transform 0.6s ease-in-out;
-      transition: transform 0.6s ease-in-out, -webkit-transform 0.6s ease-in-out;
-
-      img {
-        display: block;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        object-position: center;
-
-        @media (min-width: $viewport-xl) {
-          object-fit: contain;
-        }
-      }
-    }
-
-    @media (prefers-reduced-motion: reduce) {
-      .carousel-item {
-        transition: none;
-      }
-    }
-
-    .carousel-item.active,
-    .carousel-item-next,
-    .carousel-item-prev {
-      display: block;
-    }
-
-    .carousel-item-next:not(.carousel-item-left),
-    .active.carousel-item-right {
-      -webkit-transform: translateX(100%);
-      transform: translateX(100%);
-    }
-
-    .carousel-item-prev:not(.carousel-item-right),
-    .active.carousel-item-left {
-      -webkit-transform: translateX(-100%);
-      transform: translateX(-100%);
-    }
-
-    .carousel-fade .carousel-item {
-      opacity: 0;
-      transition-property: opacity;
-      -webkit-transform: none;
-      transform: none;
-    }
-
-    .carousel-fade .carousel-item.active,
-    .carousel-fade .carousel-item-next.carousel-item-left,
-    .carousel-fade .carousel-item-prev.carousel-item-right {
-      z-index: 1;
-      opacity: 1;
-    }
-
-    .carousel-fade .active.carousel-item-left,
-    .carousel-fade .active.carousel-item-right {
-      z-index: 0;
-      opacity: 0;
-      transition: opacity 0s 0.6s;
-    }
-
-    @media (prefers-reduced-motion: reduce) {
-      .carousel-fade .active.carousel-item-left,
-      .carousel-fade .active.carousel-item-right {
-        transition: none;
-      }
-    }
-
-    .carousel-control-prev,
-    .carousel-control-next {
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      z-index: 1;
-      display: -ms-flexbox;
-      display: flex;
-      -ms-flex-align: center;
-      align-items: center;
-      -ms-flex-pack: center;
-      justify-content: center;
-      width: 15%;
-      color: #fff;
-      text-align: center;
-      opacity: 0.5;
-      transition: opacity 0.15s ease;
-    }
-
-    @media (prefers-reduced-motion: reduce) {
-      .carousel-control-prev,
-      .carousel-control-next {
-        transition: none;
-      }
-    }
-
-    .carousel-control-prev:hover,
-    .carousel-control-prev:focus,
-    .carousel-control-next:hover,
-    .carousel-control-next:focus {
-      color: #fff;
-      text-decoration: none;
-      outline: 0;
-      opacity: 0.9;
-    }
-
-    .carousel-control-prev {
-      left: 0;
-    }
-
-    .carousel-control-next {
-      right: 0;
-    }
-
-    .carousel-control-prev-icon,
-    .carousel-control-next-icon {
-      display: inline-block;
-      width: 20px;
-      height: 20px;
-      border-bottom: 3px solid $secondary-color;
-      border-left: 3px solid $secondary-color;
-    }
-
-    .carousel-control-prev-icon {
-      transform: rotate(45deg);
-    }
-
-    .carousel-control-next-icon {
-      transform: rotate(-135deg);
-    }
-
-    .carousel-indicators {
-      position: absolute;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      z-index: 1;
-      display: -ms-flexbox;
-      display: flex;
-      -ms-flex-pack: center;
-      justify-content: center;
-      padding-left: 0;
-      list-style: none;
-      background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3));
-    }
-
-    .carousel-indicators li {
-      box-sizing: content-box;
-      -ms-flex: 0 1 auto;
-      flex: 0 1 auto;
-      width: 8px;
-      height: 8px;
-      border-radius: 100%;
-      margin-right: 3px;
-      margin-left: 3px;
-      text-indent: -999px;
-      cursor: pointer;
-      background-color: #fff;
-      background-clip: padding-box;
-      border-top: 10px solid transparent;
-      border-bottom: 10px solid transparent;
-      opacity: 0.5;
-      transition: opacity 0.6s ease;
-    }
-
-    @media (prefers-reduced-motion: reduce) {
-      .carousel-indicators li {
-        transition: none;
-      }
-    }
-
-    .carousel-indicators .active {
-      opacity: 1;
-    }
-
-    .carousel-caption {
-      position: absolute;
-      right: 15%;
-      bottom: 20px;
-      left: 15%;
-      z-index: 10;
-      padding-top: 20px;
-      padding-bottom: 20px;
-      color: #fff;
-      text-align: center;
-    }
-  }
 }
 
 /*CONTACT*/
@@ -948,7 +727,7 @@ main {
   .product-preview-list {
     grid-area: product-list;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 2rem;
     justify-items: center;
   }
