--- a/src/styles/_productPreview.scss
+++ b/src/styles/_productPreview.scss
@@ -10,6 +10,7 @@
   .product-preview-wrapper {
     position: relative;
     box-shadow: $shadow-md;
+    max-width: 300px;
 
     .product-preview {
       background-color: #000000;
@@ -43,8 +44,8 @@
 
         img {
           object-fit: contain;
-          width: 300px;
           height: 250px;
+          width: 100%;
           position: relative;
           z-index: 1;
         }
