--- a/src/styles/_mailing.scss
+++ b/src/styles/_mailing.scss
@@ -2,7 +2,7 @@
 
 .mailing {
   grid-area: mailing;
-  background-image: url("/notebookpowerui/mailing.jpg");
+  background-image: url("/mailing.jpg");
   padding: 5rem 0;
   text-align: center;
   @extend %container-x;
