--- a/src/styles/_banner.scss
+++ b/src/styles/_banner.scss
@@ -7,6 +7,9 @@
   color: $tertiary-color;
   display: flex;
   align-items: flex-end;
+  background-image: url("/NotebookpowerUI/banner.jpg");
+  background-size: cover;
+  background-position: top;
 
   .text-card {
     margin: 2rem;
