admin panel modifications for new local libs

--- a/src/styles/_admin.scss
+++ b/src/styles/_admin.scss
@@ -1,160 +1,5 @@
-@import "_variables";
-
-#admin {
-  grid-template-columns: 280px 1fr 1px;
-  gap: 1rem;
-  background-color: transparent;
-  color: $secondary-color;
-
-  hr {
-    border: none;
-    height: 2px;
-    width: 75%;
-    margin: 0.6rem auto;
-    background-color: $secondary-color;
-  }
-
-  nav {
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 280px;
-    height: 100vh;
-    overflow-y: auto;
-    overflow-x: hidden;
-    background-color: $light-grey;
-    @extend %container-y;
-    color: $secondary-color;
-    text-align: center;
-
-    .nav-links {
-      margin-top: 2rem;
-      .nav-link {
-        border-bottom: 1px solid $secondary-color;
-        transition: all 0.4s;
-
-        &:last-child {
-          border-bottom: none;
-        }
-
-        &:hover {
-          background-color: $secondary-color;
-          color: $primary-color;
-        }
-
-        a {
-          display: block;
-          color: inherit;
-          padding: 0.8rem 0;
-          width: 100%;
-          font-weight: lighter;
-        }
-      }
-    }
-  }
-
-  h1,
-  h2 {
-    position: relative;
-    padding-bottom: 0.4rem;
-    text-align: center;
-
-    &::before {
-      content: "";
-      position: absolute;
-      bottom: 0;
-      left: 50%;
-      transform: translateX(-50%);
-      background-color: red;
-      width: 15%;
-      height: 2px;
-    }
-  }
-
-  h4 {
-    text-align: left;
-  }
-
-  table {
-    color: $secondary-color;
-
-    thead {
-      color: $tertiary-color;
-
-      tr th:last-child {
-        width: 140px !important;
-      }
-    }
-
-    img {
-      width: 50px;
-    }
-
-    thead tbody tr td:last-child {
-      width: 140px !important;
-    }
-  }
-
-  form {
-    .form-control,
-    .custom-select {
-      height: calc(2.8em);
-    }
-
-    label {
-      position: relative;
-      padding-bottom: 0.2rem;
-    }
-    label::before {
-      content: "";
-      width: 30px;
-      height: 2px;
-      background-color: red;
-      position: absolute;
-      bottom: 0;
-      left: 0;
-    }
-  }
-
-  #admin-add-product {
-    grid-column: 2/3;
-  }
-
-  #admin-order-list {
-    grid-column: 2/3;
-  }
-
-  #admin-product-list {
-    grid-column: 2/3;
-  }
-
-  #admin-order-details {
-    grid-column: 2/3;
-    justify-self: center;
-
-    dl {
-      width: 100%;
-
-      dt,
-      dd {
-        padding: 0.6rem;
-      }
-
-      dd {
-        background-color: rgba(0, 0, 0, 0.05);
-      }
-    }
-  }
-
-  #admin-update-product {
-    grid-column: 2/3;
-  }
-
-  #email-list {
-    grid-column: 2/3;
-  }
-
-  #feedbacks {
-    grid-column: 2/3;
+.panel-wrapper {
+  main {
+    display: block;
   }
 }
