--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -16,6 +16,7 @@
 @import "_modal";
 @import "_skeleton";
 @import "_admin";
+@import "_overrides";
 
 * {
   padding: 0;
@@ -85,13 +86,18 @@
   }
 }
 
+.mpanel {
+  display: block !important;
+  background-color: #fff !important;
+}
+
 button,
 input[type="submit"] {
   cursor: pointer;
 }
 
 body {
-  font-family: "Jost", sans-serif;
+  font-family: "Jost", sans-serif !important;
   overflow-x: hidden;
 }
 
@@ -286,7 +292,7 @@ main {
   left: 50%;
   top: -200px;
   transform: translateX(-50%);
-  z-index: 999;
+  z-index: 999999;
   border-radius: 10px;
   box-shadow: $shadow-md;
   transition: all 0.6s;
